[tool.poetry]
name = "pico-torrent"
version = "0.1.0"
description = ""
authors = ["Nikita Tomchik <cdayz@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8-bugbear = "^20.1.4"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-docstrings = "^1.5.0"
flake8-fixme = "^1.1.1"
flake8-pep3101 = "^1.3.0"
flake8-polyfill = "^1.0.2"
flake8-comprehensions = "^3.2.3"
flake8-bandit = "^2.1.2"
flake8 = "^3.8.3"
mypy = "^0.782"

[tool.poetry.scripts]
pico-client = "pico_torrent.cmd.client:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

